--- a/app/admin/templates/dashboard/company_details.html
+++ b/app/admin/templates/dashboard/company_details.html
@@ -56,7 +56,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="{{ url_for('admin.request_company_correction', company_id=company.id) }}" method="post">
+                    <form action="{{ url_for('admin.request_correction', company_id=company.id) }}" method="post">
                         <textarea name="admin_notes" class="form-control" rows="4" placeholder="Write your notes..."></textarea>
                         <div class="text-end mt-3">
                             <button type="submit" class="btn btn-warning">Send Request</button>
